src/CompiladorParser.py
# Generated from Compilador.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiladorParser ( Parser ):

    grammarFileName = "Compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'criar'", "'repetir'", "'consultar'", 
                     "'deletar'", "'evento'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CRIAR", "REPETIR", "CONSULTAR", "DELETAR", 
                      "EVENTO", "ACHAV", "FCHAV", "HORA", "DATA", "DIA", 
                      "MES", "ANO", "NOME", "NUM", "BRANCO" ]

    RULE_prog = 0
    RULE_com = 1

    ruleNames =  [ "prog", "com" ]

    EOF = Token.EOF
    CRIAR=1
    REPETIR=2
    CONSULTAR=3
    DELETAR=4
    EVENTO=5
    ACHAV=6
    FCHAV=7
    HORA=8
    DATA=9
    DIA=10
    MES=11
    ANO=12
    NOME=13
    NUM=14
    BRANCO=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CompiladorParser.EOF, 0)

        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = CompiladorParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 5 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 4
                self.com()
                self.state = 7 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                    break

            self.state = 9
            self.match(CompiladorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CRIAR(self):
            return self.getToken(CompiladorParser.CRIAR, 0)

        def EVENTO(self):
            return self.getToken(CompiladorParser.EVENTO, 0)

        def NOME(self):
            return self.getToken(CompiladorParser.NOME, 0)

        def DATA(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.DATA)
            else:
                return self.getToken(CompiladorParser.DATA, i)

        def HORA(self, i:int=None):
            if i is None:
                return self.getTokens(CompiladorParser.HORA)
            else:
                return self.getToken(CompiladorParser.HORA, i)

        def DELETAR(self):
            return self.getToken(CompiladorParser.DELETAR, 0)

        def REPETIR(self):
            return self.getToken(CompiladorParser.REPETIR, 0)

        def NUM(self):
            return self.getToken(CompiladorParser.NUM, 0)

        def ACHAV(self):
            return self.getToken(CompiladorParser.ACHAV, 0)

        def FCHAV(self):
            return self.getToken(CompiladorParser.FCHAV, 0)

        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComContext,i)


        def CONSULTAR(self):
            return self.getToken(CompiladorParser.CONSULTAR, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_com

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCom" ):
                listener.enterCom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCom" ):
                listener.exitCom(self)




    def com(self):

        localctx = CompiladorParser.ComContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_com)
        self._la = 0 # Token type
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 11
                self.match(CompiladorParser.CRIAR)
                self.state = 12
                self.match(CompiladorParser.EVENTO)
                self.state = 13
                self.match(CompiladorParser.NOME)
                self.state = 14
                self.match(CompiladorParser.DATA)
                self.state = 15
                self.match(CompiladorParser.HORA)
                self.state = 16
                self.match(CompiladorParser.DATA)
                self.state = 17
                self.match(CompiladorParser.HORA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.match(CompiladorParser.DELETAR)
                self.state = 19
                self.match(CompiladorParser.EVENTO)
                self.state = 20
                self.match(CompiladorParser.NOME)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 21
                self.match(CompiladorParser.DELETAR)
                self.state = 22
                self.match(CompiladorParser.EVENTO)
                self.state = 23
                self.match(CompiladorParser.DATA)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 24
                self.match(CompiladorParser.REPETIR)
                self.state = 25
                self.match(CompiladorParser.EVENTO)
                self.state = 26
                self.match(CompiladorParser.NUM)
                self.state = 27
                self.match(CompiladorParser.ACHAV)
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 28
                    self.com()
                    self.state = 31 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                        break

                self.state = 33
                self.match(CompiladorParser.FCHAV)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.match(CompiladorParser.CONSULTAR)
                self.state = 36
                self.match(CompiladorParser.EVENTO)
                self.state = 37
                self.match(CompiladorParser.NOME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





